syntax = "proto3";
package dydxprotocol.daemons.sdai;

import "gogoproto/gogo.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/daemons/sdaioracle/api";

// sDAIService defines the gRPC service used by sDAI daemon.
service sDAIService {
  // Sends a list of newly recognized sDAI events.
  rpc AddsDAIEvents(AddsDAIEventsRequest) returns (AddsDAIEventsResponse);
}

// AddsDAIEventsRequest is a request message that contains a new
// sDAI conversion rate.
message AddsDAIEventsRequest {
    string conversion_rate = 1;
}

// AddsDAIEventsResponse is a response message for AddsDAIEventsRequest.
message AddsDAIEventsResponse {}
