syntax = "proto3";
package dydxprotocol.govplus;

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/govplus/types";

// GenesisState defines the govplus module's genesis state.
message GenesisState {}
